--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "main": "./index.js",
   "version": "1.0.0",
   "dependencies": {
+    "@ethersproject/shims": "^5.8.0",
     "@expo/vector-icons": "^14.1.0",
+    "@privy-io/expo": "^0.57.0",
+    "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -40,26 +43,32 @@
     "@tanstack/react-query": "^5.80.6",
     "@wallet-standard/core": "^1.1.1",
     "expo": "~53.0.16",
+    "expo-apple-authentication": "~7.2.4",
+    "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
-    "expo-crypto": "^14.1.5",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.3",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.6",
+    "expo-linking": "~7.1.7",
     "expo-router": "~5.1.0",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "fast-text-encoding": "^1.0.6",
     "js-base64": "^3.7.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-passkeys": "^0.3.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
