--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@react-navigation/native": "^7.1.6",
     "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
-    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.2",
-    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.2",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "file:../../sms/mobile-wallet-adapter/js/packages/mobile-wallet-adapter-protocol",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "file:../../sms/mobile-wallet-adapter/js/packages/mobile-wallet-adapter-protocol-web3js",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.80.6",
